--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,129 @@
-.App {
+.navbar{
+  background-color: aquamarine;
+  margin: 20px;
+}
+
+.card {
+  text-align: center;
+  border: grey solid 1px;
+  padding: 1rem;
+  width: 15rem;
+  height: 25rem;
+  display: inline-grid;
+  margin: 1rem 2rem;
+  box-shadow: 3px 4px aquamarine
+}
+
+.team {
+  text-align: center;
+  border: grey solid 1px;
+  padding: 1rem;
+  width: 10rem;
+  height: 15rem;
+  display: inline-grid;
+  margin: 1rem 2rem;
+  box-shadow: 3px 4px red
+}
+
+.teamImg {
+  justify-self: center;
+  height: 6rem;
+  width: auto;
+}
+
+.card:hover {
+  box-shadow: 0 0 3px 3px red;
+}
+
+.superhero-avatar {
+  justify-self: center;
+  height: 12rem;
+  width: auto;
+}
+
+button {
+  position: relative;
+  background-color: aquamarine;
+  border: none;
+  border-radius: 5px;
+  height: 2.5rem;
+  width: max-content;
+  color: red;
+  font-size: 15px;
+  justify-self: center;
+  margin-top: 5px;
+}
+
+button:hover {
+  background-color: red;
+  border: aquamarine solid 1px;
+  color: aquamarine;
+}
+
+.cards {
+  display: flex;  
+  flex-direction: row; 
+  justify-content: center; 
+  align-items: center;
+  }
+
+  .bio {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .alignTeam {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  h1 {
+    text-align: center;
+  }
+  table{
+    border: 1px solid rgb(95, 93, 93);
+    width: 500px;
+    margin-left: 50px;
+    border-radius: 10px;
+    box-shadow: 3px 4px grey
+  }
+  
+  th {
+    height: 30px;
+  }
+
+  td {
+    text-align: center;
+  }
+
+  tr:nth-child(even) {background-color: rgb(247, 112, 112);}
+  tr:nth-child(odd) {background-color: aquamarine;}
+
+
+.search {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search input {
+  width: 400px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
+  text-align: center;
+}
+
+.collection {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  margin-bottom: 10px;
 }
