--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,9 +25,26 @@
   box-shadow: 3px 4px red
 }
 
+.teamCard {
+  text-align: center;
+  border: grey solid 1px;
+  padding: 1rem;
+  width: 7rem;
+  height: 12rem;
+  display: inline-grid;
+  margin: 1rem 2rem;
+  box-shadow: 3px 4px red
+}
+
 .teamImg {
   justify-self: center;
   height: 6rem;
+  width: auto;
+}
+
+.teamImage {
+  justify-self: center;
+  height: 13rem;
   width: auto;
 }
 
@@ -65,6 +82,16 @@ button:hover {
   flex-direction: row; 
   justify-content: center; 
   align-items: center;
+  }
+
+  .collectionCard {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+  }
+
+  p {
+    font-size: 13px;
   }
 
   .bio {
@@ -126,4 +153,70 @@ p {
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
+}
+
+.flip-card {
+  margin: 10px;
+  background-color: transparent;
+  width: 200px;
+  height: 300px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+  display: flex;
+/* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: aquamarine;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: red;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+.homeImg {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
 }
